//! Schema management commands

use clap::Subcommand;
use serde::{Deserialize, Serialize};
use uuid::Uuid;

use crate::{config::Config, error::Result, output};

#[derive(Subcommand)]
pub enum SchemaCommand {
    /// List all schemas
    List {
        /// Filter by subject
        #[arg(short, long)]
        subject: Option<String>,

        /// Filter by schema type
        #[arg(short, long)]
        schema_type: Option<String>,

        /// Limit number of results
        #[arg(short, long, default_value = "100")]
        limit: usize,
    },

    /// Get schema by ID
    Get {
        /// Schema ID
        id: String,

        /// Show full content
        #[arg(short, long)]
        full: bool,
    },

    /// Register a new schema
    Register {
        /// Subject name
        #[arg(short, long)]
        subject: String,

        /// Schema content (file path or JSON)
        #[arg(short, long)]
        content: String,

        /// Schema type (JSON, AVRO, PROTOBUF, THRIFT)
        #[arg(short = 't', long, default_value = "JSON")]
        schema_type: String,

        /// Version (major.minor.patch)
        #[arg(short, long)]
        version: String,
    },

    /// Validate schema content
    Validate {
        /// Schema content (file path or JSON)
        content: String,

        /// Schema type
        #[arg(short = 't', long, default_value = "JSON")]
        schema_type: String,
    },

    /// Check compatibility between schemas
    Compatible {
        /// Old schema ID
        old: String,

        /// New schema ID or content
        new: String,

        /// Compatibility mode (BACKWARD, FORWARD, FULL, NONE)
        #[arg(short, long, default_value = "BACKWARD")]
        mode: String,
    },

    /// Get schema versions
    Versions {
        /// Subject name
        subject: String,
    },

    /// Delete a schema
    Delete {
        /// Schema ID
        id: String,

        /// Confirm deletion
        #[arg(short, long)]
        confirm: bool,
    },

    /// Search schemas
    Search {
        /// Search query
        query: String,

        /// Limit results
        #[arg(short, long, default_value = "20")]
        limit: usize,
    },
}

#[derive(Debug, Serialize, Deserialize)]
pub struct SchemaListItem {
    pub id: Uuid,
    pub subject: String,
    pub version: String,
    pub schema_type: String,
    pub created_at: String,
}

pub async fn execute(cmd: SchemaCommand, config: &Config, format: output::OutputFormat) -> Result<()> {
    match cmd {
        SchemaCommand::List { subject, schema_type, limit } => {
            list_schemas(config, subject.as_deref(), schema_type.as_deref(), limit, format).await
        }
        SchemaCommand::Get { id, full } => {
            get_schema(config, &id, full, format).await
        }
        SchemaCommand::Register { subject, content, schema_type, version } => {
            register_schema(config, &subject, &content, &schema_type, &version, format).await
        }
        SchemaCommand::Validate { content, schema_type } => {
            validate_schema(config, &content, &schema_type, format).await
        }
        SchemaCommand::Compatible { old, new, mode } => {
            check_compatibility(config, &old, &new, &mode, format).await
        }
        SchemaCommand::Versions { subject } => {
            list_versions(config, &subject, format).await
        }
        SchemaCommand::Delete { id, confirm } => {
            delete_schema(config, &id, confirm, format).await
        }
        SchemaCommand::Search { query, limit } => {
            search_schemas(config, &query, limit, format).await
        }
    }
}

async fn list_schemas(
    _config: &Config,
    subject: Option<&str>,
    schema_type: Option<&str>,
    limit: usize,
    format: output::OutputFormat,
) -> Result<()> {
    // TODO: Implement actual API call
    output::print_info(&format!(
        "Listing schemas (subject: {:?}, type: {:?}, limit: {})",
        subject, schema_type, limit
    ));

    // Mock data for now
    let schemas = vec![
        SchemaListItem {
            id: Uuid::new_v4(),
            subject: "com.example.User".to_string(),
            version: "1.0.0".to_string(),
            schema_type: "JSON".to_string(),
            created_at: "2024-01-15T10:30:00Z".to_string(),
        },
    ];

    match format {
        output::OutputFormat::Table => {
            output::print_table(
                vec!["ID", "Subject", "Version", "Type", "Created"],
                schemas.iter().map(|s| vec![
                    s.id.to_string(),
                    s.subject.clone(),
                    s.version.clone(),
                    s.schema_type.clone(),
                    s.created_at.clone(),
                ]).collect(),
            );
        }
        _ => {
            output::print(&schemas, format)?;
        }
    }

    Ok(())
}

async fn get_schema(_config: &Config, id: &str, _full: bool, format: output::OutputFormat) -> Result<()> {
    output::print_info(&format!("Getting schema: {}", id));

    // Mock data
    let schema = serde_json::json!({
        "id": id,
        "subject": "com.example.User",
        "version": "1.0.0",
        "schema_type": "JSON",
        "content": {
            "type": "object",
            "properties": {
                "name": { "type": "string" },
                "email": { "type": "string" }
            }
        }
    });

    output::print(&schema, format)?;
    Ok(())
}

async fn register_schema(
    _config: &Config,
    subject: &str,
    content: &str,
    schema_type: &str,
    version: &str,
    _format: output::OutputFormat,
) -> Result<()> {
    output::print_info(&format!(
        "Registering schema: {} (type: {}, version: {})",
        subject, schema_type, version
    ));

    // TODO: Implement actual registration
    let _content = if std::path::Path::new(content).exists() {
        std::fs::read_to_string(content)?
    } else {
        content.to_string()
    };

    let schema_id = Uuid::new_v4();
    output::print_success(&format!("Schema registered with ID: {}", schema_id));

    Ok(())
}

async fn validate_schema(
    _config: &Config,
    content: &str,
    schema_type: &str,
    _format: output::OutputFormat,
) -> Result<()> {
    output::print_info(&format!("Validating {} schema", schema_type));

    // TODO: Implement actual validation
    let _content = if std::path::Path::new(content).exists() {
        std::fs::read_to_string(content)?
    } else {
        content.to_string()
    };

    output::print_success("Schema is valid");
    Ok(())
}

async fn check_compatibility(
    _config: &Config,
    old: &str,
    new: &str,
    mode: &str,
    _format: output::OutputFormat,
) -> Result<()> {
    output::print_info(&format!(
        "Checking compatibility: {} -> {} (mode: {})",
        old, new, mode
    ));

    // TODO: Implement actual compatibility check
    output::print_success("Schemas are compatible");
    Ok(())
}

async fn list_versions(_config: &Config, subject: &str, format: output::OutputFormat) -> Result<()> {
    output::print_info(&format!("Listing versions for subject: {}", subject));

    // Mock data
    let versions = vec!["1.0.0", "1.1.0", "1.2.0", "2.0.0"];

    match format {
        output::OutputFormat::Table | output::OutputFormat::Plain => {
            for v in &versions {
                println!("{}", v);
            }
        }
        _ => {
            output::print(&versions, format)?;
        }
    }

    Ok(())
}

async fn delete_schema(_config: &Config, id: &str, confirm: bool, _format: output::OutputFormat) -> Result<()> {
    if !confirm {
        output::print_warning("Deletion not confirmed. Use --confirm to proceed.");
        return Ok(());
    }

    output::print_info(&format!("Deleting schema: {}", id));
    // TODO: Implement actual deletion
    output::print_success("Schema deleted");
    Ok(())
}

async fn search_schemas(_config: &Config, query: &str, limit: usize, format: output::OutputFormat) -> Result<()> {
    output::print_info(&format!("Searching schemas: {} (limit: {})", query, limit));

    // Mock results
    let results = vec![
        SchemaListItem {
            id: Uuid::new_v4(),
            subject: format!("com.example.{}", query),
            version: "1.0.0".to_string(),
            schema_type: "JSON".to_string(),
            created_at: "2024-01-15T10:30:00Z".to_string(),
        },
    ];

    output::print(&results, format)?;
    Ok(())
}
